[package]
name = "ggez"
description = "A lightweight game framework for making 2D games with minimum friction, inspired by Love2D."
version = "0.7.0"
homepage = "http://ggez.rs"
repository = "https://github.com/ggez/ggez"
documentation = "https://docs.rs/ggez"
keywords = ["ggez", "graphics", "2D", "game", "engine"]
authors = [
   "Rafael Epplee <raffomania@gmail.com>",
   "Sven-Hendrik Haase <svenstaro@gmail.com>",
   "Simon Heath <icefoxen@gmail.com>",
]

edition = "2021"
license = "MIT"
readme = "README.md"
categories = ["game-engines"]
build = "build.rs"
exclude = [
   "docs",
   "resources",
   "!LiberationMono-Regular.ttf"
]

[badges]
maintenance = { status = "actively-maintained" }

[lib]
name = "ggez"
path = "src/lib.rs"

[features]
default = ["c_dependencies", "include_sdl2"]
bzip2 = ["zip/bzip2"]
mp3 = ["rodio/mp3"]
multithread-image-decoding = ["image/hdr", "image/jpeg_rayon"]
c_dependencies = ["bzip2", "mp3"]
include_sdl2 = ["pistoncore-sdl2_window"]

[dependencies]
piston = "0.35.0"
piston2d-opengl_graphics = "0.50.0"
piston2d-graphics = "0.24.0"
piston2d-touch_visualizer = "0.8.0"
voronoi = "0.1.4"
rand = "0.3"
getopts = "0.2.15"
bitflags = "1"
zip = { version = "0.5", default-features = false }
directories = "3"
gfx = "0.18"
gfx_core = "0.9"
gfx_device_gl = "0.16"
glyph_brush = "0.7"
old_school_gfx_glutin_ext = "0.27"
glutin = "0.27"
winit = "0.25"
image = {version = "0.23", default-features = false, features = ["gif", "png", "pnm", "tga", "tiff", "webp", "bmp", "dxt", ] }
rodio = { version = "0.14", default-features = false, features = ["flac", "vorbis", "wav"] }
serde = "1"
serde_derive = "1"
toml = "0.5"
log = "0.4"
lyon = "0.17"
smart-default = "0.6"
glam = { version = "0.20", features = ["mint"]}
# Has to be the same version of mint that our math lib uses here.
mint = "0.5"
gilrs = "0.8"
approx = "0.5"
bytemuck = "1.7"
getrandom = { version = "0.2", features = ["js"] }
chrono = "0.4.19"
embedded-graphics = { git = "https://github.com/embedded-graphics/embedded-graphics.git" }

embedded-text = { git = "https://github.com/embedded-graphics/embedded-text.git" }
tinybmp = { git = "https://github.com/embedded-graphics/tinybmp.git" }
tinytga = { git = "https://github.com/embedded-graphics/tinytga.git" }

[patch.crates-io]
embedded-graphics = { git = "https://github.com/embedded-graphics/embedded-graphics.git" }
embedded-graphics-core = { git = "https://github.com/embedded-graphics/embedded-graphics.git" }
embedded-text = { git = "https://github.com/embedded-graphics/embedded-text.git" }
tinybmp = { git = "https://github.com/embedded-graphics/tinybmp.git" }
tinytga = { git = "https://github.com/embedded-graphics/tinytga.git" }

[dependencies.pistoncore-sdl2_window]
version = "0.47.0"
optional = true

[dev-dependencies]
chrono = "0.4"
fern = "0.6"
oorandom = "11"
argh = "0.1"
rand = "0.8"
keyframe = "1"
keyframe_derive = "1"
num-traits = "0.2"
num-derive = "0.3"

skeptic = "0.13"
getrandom = "0.2"

[build-dependencies]
skeptic = "0.13"
